{
    "name": "InputAsset",
    "maps": [
        {
            "name": "Main",
            "id": "570bed27-c7d0-4b7f-b447-076dd31bb8fc",
            "actions": [
                {
                    "name": "MouseLeftButton",
                    "type": "Button",
                    "id": "2e82e19f-0667-4e16-9ec3-3db449cf6563",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseRightButton",
                    "type": "Button",
                    "id": "ae54d909-5282-4325-bbf8-4f500f487ab8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseDeltaX",
                    "type": "Value",
                    "id": "8252d482-7289-4cc9-b295-f41991bbb47d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseDeltaY",
                    "type": "Value",
                    "id": "34362869-9b56-4d05-b1a3-d47b8c8c9eb7",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "45f20cee-7d0b-4bda-bcf4-87b3b754dbc3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OpenShop",
                    "type": "Button",
                    "id": "b6f2e580-d5ff-4d36-92a6-e516c5904f76",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "fa951ed2-32e2-4f32-a722-eb23bea8dbcd",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "9893a508-30d1-486f-af22-e29ec1feaa44",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bffdf564-4623-4273-8dac-41651351f38a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f4283703-0fae-4cda-8312-47f1229556d3",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRightButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "933fdab2-ff5d-492e-b405-63a617bf9f27",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDeltaX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "21797f55-8f56-49fe-bb82-b077a143d6d1",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDeltaY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8777162-3d39-4478-8ae4-c73a0826c4fc",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e15c6e59-b54b-4c85-a7a9-1f5cc678cad2",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenShop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "82a1ef2f-a500-4499-8698-eecb2f051674",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e2d5921b-98f2-42f4-b133-32506c0a323c",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}